--- a/src/main/resources/templates/goodbye.mustache
+++ b/src/main/resources/templates/goodbye.mustache
@@ -2,7 +2,7 @@
 
 <!--content-->
 <div class="bg-dark text-white p-5">
-    <h1>{{username}}님.. 방가</h1>
+    <h1>{{nickname}}님.. 다음에 또 만나요</h1>
 </div>
 
 
